category and product 1:1 1:m done
