# src/router.go
@@ -3,6 +3,7 @@ package src
 import (
 	"grest-belajar/app"
 	"grest-belajar/src/category"
+	"grest-belajar/src/product"
 	"grest-belajar/src/user"
 	// import : DONT REMOVE THIS COMMENT
 )
@@ -39,12 +40,12 @@ func (r *routerUtil) Configure() {
 	app.Server().AddRoute("/api/categories/{id}", "PATCH", category.REST().PartiallyUpdateByID, category.OpenAPI().PartiallyUpdateByID())
 	app.Server().AddRoute("/api/categories/{id}", "DELETE", category.REST().DeleteByID, category.OpenAPI().DeleteByID())
 
-	app.Server().AddRoute("/api/categories", "POST", category.REST().Create, category.OpenAPI().Create())
-	app.Server().AddRoute("/api/categories", "GET", category.REST().Get, category.OpenAPI().Get())
-	app.Server().AddRoute("/api/categories/{id}", "GET", category.REST().GetByID, category.OpenAPI().GetByID())
-	app.Server().AddRoute("/api/categories/{id}", "PUT", category.REST().UpdateByID, category.OpenAPI().UpdateByID())
-	app.Server().AddRoute("/api/categories/{id}", "PATCH", category.REST().PartiallyUpdateByID, category.OpenAPI().PartiallyUpdateByID())
-	app.Server().AddRoute("/api/categories/{id}", "DELETE", category.REST().DeleteByID, category.OpenAPI().DeleteByID())
+	app.Server().AddRoute("/api/products", "POST", product.REST().Create, product.OpenAPI().Create())
+	app.Server().AddRoute("/api/products", "GET", product.REST().Get, product.OpenAPI().Get())
+	app.Server().AddRoute("/api/products/{id}", "GET", product.REST().GetByID, product.OpenAPI().GetByID())
+	app.Server().AddRoute("/api/products/{id}", "PUT", product.REST().UpdateByID, product.OpenAPI().UpdateByID())
+	app.Server().AddRoute("/api/products/{id}", "PATCH", product.REST().PartiallyUpdateByID, product.OpenAPI().PartiallyUpdateByID())
+	app.Server().AddRoute("/api/products/{id}", "DELETE", product.REST().DeleteByID, product.OpenAPI().DeleteByID())
 
 	// AddRoute : DONT REMOVE THIS COMMENT
 }
